[metadata]
name = restriction_middleware
summary = Openstack Restriction Middleware
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages =
    restriction_middleware

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
paste.filter_factory =
    restriction_middleware = restriction_middleware.restriction_middleware:RestrictionWsgiMiddleware.factory
